# hardware-monitoring

./: .gitignore  IMPLEMENTATION_PLAN.md  TASKS.md  package-lock.json  package.json  tailwind.config.js
scripts/: cleanup.ps1  generate-icon.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/lhm-sidecar/: Program.cs  lhm-sidecar.csproj
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  system_stats.rs  window.rs
src-tauri/src/models/: mod.rs  stats.rs
src-tauri/src/services/: mod.rs  monitor.rs  sidecar.rs
src-tauri/src/utils/: mod.rs
src/components/charts/: ProgressBar.tsx  SystemChart.tsx  index.ts
src/components/common/: AnimatedComponents.tsx  ThemeToggle.tsx
src/components/ui/: card.tsx
src/features/dashboard/: index.tsx
src/features/dashboard/components/: CpuCard.tsx  GpuCard.tsx  PerformanceChart.tsx  RamCard.tsx  SidecarWarning.tsx  SystemInfoCard.tsx  TopProcessesCard.tsx  index.ts
src/features/dashboard/hooks/: index.ts  useSidecarStatus.ts  useSystemStats.ts
src/features/mini-mode/: index.tsx
src/features/mini-mode/components/: CompactWidget.tsx  index.ts
src/hooks/: index.ts  useTauriEvent.ts  useWindowType.ts
src/lib/: constants.ts  tauri.ts  utils.ts
src/providers/: ThemeProvider.tsx
src/types/: stats.ts
